--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build",
-    "source": "functions"
+    "source": "functions",
+    "runtime": "nodejs18"
   },
   "emulators": {
     "functions": {
