--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,7 +58,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.fluttercon.app"
+        applicationId "io.invertase.fluttercon"
         minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
