feat: handle URL notification

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
     package="io.invertase.fluttercon">
     
    <uses-permission android:name="android.permission.INTERNET"/>
+
+   <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
+   </queries>
    
    <application
         android:label="FlutterCon"
