fix: Firestore iOS SDK version

--- a/conference_app_toolkit/__brick__/.vscode/launch.json
+++ b/conference_app_toolkit/__brick__/.vscode/launch.json
@@ -23,6 +23,7 @@
 			"request": "launch",
 			"type": "dart",
 			"args": [
+				"--${input:flutterMode}",
 				"--flavor",
 				"${input:environement}",
 				"--dart-define",
